# richparser

./: pyproject.toml  readme.md  test.py
richparser/: __init__.py  parser.py  utilities.py
